force-app/main/default/objects/Onboarding_Comment__c/Onboarding_Comment__c.object-meta.xml
<CustomObject>
    <description>Collaboration comments on an Onboarding Request. Supports internal-only notes visible only to HR, and general comments visible to managers.</description>
    <label>Onboarding Comment</label>
    <nameField>
        <displayFormat>COM-{0000}</displayFormat>
        <label>Onboarding Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>