force-app/main/default/objects/Onboarding_Comment__c/fields/Is_Internal__c.field-meta.xml
<CustomField>
    <fullName>Is_Internal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Only</label>
    <type>Checkbox</type>
</CustomField>